# win-fast-rm

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
