[package]
version = "1.0.1"
edition = "2021"

name = "win_fast_rm"
description = "The actually faster way to delete files on Windows"
authors = ["xirreal"]
license = "MIT"
repository = "https://github.com/uwu/win-fast-rm"

[lib]
name = "win_fast_rm"
path = "src/lib.rs"

[[bin]]
name = "win-fast-rm"
path = "src/bin/rm.rs"

[dependencies]
windows = { version = "0.52.0", features = [
   "Win32_Foundation",
   "Win32_UI_Shell",
   "Win32_Storage_FileSystem",
   "Win32_System_Com",
] }
